--- a/bissnes-lunch-frontend/index.html
+++ b/bissnes-lunch-frontend/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Авторизация</title>
 
 </head>
@@ -18,17 +20,43 @@
     </header>
 
 
-    <article>
-        <form action="" class="login-form">
-            <div class="d-flex">
-                <div class="login-form_form">
-
-                </div>
-                <div class="login-form_img">
-                    
-                </div>
+    <article class="form">
+        <div class="container">
+            <div class="login-form-wrapper px-5 py-3">
+                <form action="" class="">
+                    <div class="d-flex justify-content-between">
+                        <div class="login-form_form d-flex flex-column">
+                            <h1 class="text-white">Добро пожаловать на работу!</h1>
+                            <input class="form-control my-2" placeholder="Логин" type="text">
+                            <input class="form-control mb-5" placeholder="Пароль" type="password">
+                            <button class="login-button">Войти</button>
+                        </div>
+                        <div class="login-form_img">
+                            <img src="img/img_login.png" alt="">
+                        </div>
+                    </div>
+                </form>
             </div>
-        </form>
+
+
+
+
+            <div class="login-form-wrapper-mobile px-5 py-3">
+                <form action="" class="">
+                    <div class="">
+                        <div class="login-form_form d-flex flex-column">
+                            <h1 class="text-white text-center">Добро пожаловать на работу!</h1>
+                            <input class="form-control my-2" placeholder="Логин" type="text">
+                            <input class="form-control mb-5" placeholder="Пароль" type="password">
+                            <button class="login-button">Войти</button>
+                        </div>
+                        <div class="login-form_img">
+                            <img src="img/img_login.png" alt="">
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
     </article>
 
 
@@ -40,8 +68,12 @@
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+        crossorigin="anonymous"></script>
 </body>
 
-</html> 
+</html>
