--- a/bissnes-lunch-frontend/index.html
+++ b/bissnes-lunch-frontend/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Авторизация</title>
 
 </head>
@@ -23,19 +24,23 @@
     <article class="form">
         <div class="container">
             <div class="login-form-wrapper px-5 py-3">
-                <form action="" class="">
-                    <div class="d-flex justify-content-between">
-                        <div class="login-form_form d-flex flex-column">
-                            <h1 class="text-white">Добро пожаловать на работу!</h1>
-                            <input class="form-control my-2" placeholder="Логин" type="text">
-                            <input class="form-control mb-5" placeholder="Пароль" type="password">
-                            <button class="login-button">Войти</button>
+                <div data-aos="zoom-in-right" data-aos-delay="100">
+                    <form action="" class="">
+                        <div class="d-flex justify-content-between">
+                            <div class="login-form_form d-flex flex-column">
+                                <h1 class="text-white mt-5">Добро пожаловать на работу!</h1>
+                                <input class="form-control my-2" placeholder="Логин" type="text">
+                                <input class="form-control mb-5" placeholder="Пароль" type="password">
+                                <button class="login-button">Войти</button>
+                            </div>
+                            <div class="login-form_img">
+                                <div data-aos="zoom-in-left" data-aos-delay="900">
+                                    <img src="img/img_login.png" alt="">
+                                </div>
+                            </div>
                         </div>
-                        <div class="login-form_img">
-                            <img src="img/img_login.png" alt="">
-                        </div>
-                    </div>
-                </form>
+                    </form>
+                </div>
             </div>
 
 
@@ -67,13 +72,17 @@
 
 
 
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
+
+        <script>
+            AOS.init();
+        </script>
 </body>
 
 </html>
