make page documents and fix mobile version

--- a/bissnes-lunch-frontend/documents.html
+++ b/bissnes-lunch-frontend/documents.html
@@ -50,6 +50,47 @@
     </header>
 
 
+    <article class="documenst__hero mt-5">
+        <div class="container">
+            <div class="d-flex justify-content-between align-items-center flex-wrap">
+                <div class="documents__text mb-5">
+                    <h1 class="documents__text-title">Удобно оформляйте отпускные, больничные</h1>
+                    <p class="documents__text-par">Здесь вы удобно можете подать заявку на отпускные больничные и другие важные документы, которые используются в работе</p>
+                </div>
+                <div class="documents__image">
+                    <img src="img/doc.png" alt="">
+                </div>
+            </div>
+        </div>
+    </article>
+
+    <article class="documents__form mt-5 mb-5">
+        <div class="container">
+            <form action="">
+                <div class="mb-3">
+                    <label for="fio" class="form-label">ФИО</label>
+                    <input type="text" class="form-control" id="fio" disabled value="Проскурин Кирилл Александрович">
+                </div>
+                <div class="mb-5">
+                    <label for="dol" class="form-label">Должность</label>
+                    <input type="email" class="form-control" disabled id="dol" value="Стажер" >
+                </div>
+                <div class="mb-3">
+                    <label for="type_weekend" class="form-label">Вид отпуска</label>
+                    <input type="email" class="form-control" id="type_weekend" placeholder="Ежегодный, по беременности и родам и т.д">
+                </div>
+                <div class="mb-3">
+                    <label for="date_weekend" class="form-label">Дата начала отпуска, количество дней для отдыха</label>
+                    <input type="email" class="form-control" id="date_weekend" placeholder="Дата, количество дней">
+                </div>
+                <div class="mb-3">
+                    <label for="date" class="form-label">Дата</label>
+                    <input type="date" class="form-control" id="date" placeholder="">
+                </div>
+                <button type="submit" class="btn-form">Отправить документ</button>
+            </form>
+        </div>
+    </article>
   
 
 
