--- a/bissnes-lunch-frontend/login.html
+++ b/bissnes-lunch-frontend/login.html
@@ -24,9 +24,9 @@
     <article class="form">
         <div class="container">
             <div class="login-form-wrapper px-5 py-3">
-                <div data-aos="zoom-in-right" data-aos-delay="100 ">
+                <div data-aos="zoom-in-right" data-aos-delay="100">
                     <form action="" class="">
-                        <div class="d-flex justify-content-between">
+                        <div class="d-flex justify-content-between flex-wrap">
                             <div class="login-form_form d-flex flex-column">
                                 <h1 class="text-white mt-5">Добро пожаловать на работу!</h1>
                                 <input class="form-control my-2" placeholder="Логин" type="text">
@@ -46,7 +46,7 @@
 
 
 
-            <div class="login-form-wrapper-mobile px-5 py-3">
+            <!-- <div class="login-form-wrapper-mobile px-5 py-3">
                 <form action="" class="">
                     <div class="">
                         <div class="login-form_form d-flex flex-column">
@@ -60,7 +60,7 @@
                         </div>
                     </div>
                 </form>
-            </div>
+            </div> -->
         </div>
     </article>
 
