--- a/bissnes-lunch-frontend/todo.html
+++ b/bissnes-lunch-frontend/todo.html
@@ -8,7 +8,7 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
     <link rel="stylesheet" href="styles/style.css">
-    <title>Document</title>
+    <title>СПИСОК ДЕЛ</title>
 </head>
 
 <body>
